// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Form renders Profile Form 1`] = `
<div
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-1 MuiTypography-headline-6 MuiTypography-colorTextPrimary-23 MuiTypography-gutterBottom-18"
    >
      Edit Profile
    </h2>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33"
        data-shrink={true}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-42 MuiInput-disabled-45 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-disabled-45"
          defaultValue={undefined}
          disabled={true}
          id="email"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user@email.com"
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33"
        data-shrink={true}
        htmlFor={undefined}
      >
        Name
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user"
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33"
        data-shrink={true}
        htmlFor={undefined}
      >
        Description
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="desc"
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root-81 MuiButton-root-55 MuiButton-text-57 MuiButton-outlined-63 MuiButton-sizeSmall-78"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginRight": 10,
          "marginTop": 30,
        }
      }
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-56"
      >
        Save Profile
      </span>
      <span
        className="MuiTouchRipple-root-84"
      />
    </button>
  </form>
</div>
`;

exports[`Profile Form renders Profile Form with isEditingUser as true 1`] = `
<div
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-1 MuiTypography-headline-6 MuiTypography-colorTextPrimary-23 MuiTypography-gutterBottom-18"
    >
      Edit Profile
    </h2>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33"
        data-shrink={true}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-42 MuiInput-disabled-45 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-disabled-45"
          defaultValue={undefined}
          disabled={true}
          id="email"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user@email.com"
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33"
        data-shrink={true}
        htmlFor={undefined}
      >
        Name
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user"
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginNormal-27"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33"
        data-shrink={true}
        htmlFor={undefined}
      >
        Description
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="desc"
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root-81 MuiButton-root-55 MuiButton-text-57 MuiButton-outlined-63 MuiButton-sizeSmall-78"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginRight": 10,
          "marginTop": 30,
        }
      }
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-56"
      >
        <div
          className="MuiCircularProgress-root-91 MuiCircularProgress-colorPrimary-94 MuiCircularProgress-indeterminate-93"
          role="progressbar"
          style={
            Object {
              "height": 22,
              "width": 22,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-96"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-97 MuiCircularProgress-circleIndeterminate-99"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </span>
      <span
        className="MuiTouchRipple-root-84"
      />
    </button>
  </form>
</div>
`;
